welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:1: error: Missing closing brace `}' assumed here
def coupstylo(c:Color) {setCouleurBrosse(c);baisseBrosse();leveBrosse()}
^Array2:1: error: expected class or object definition
def coupstylo(c:Color) {setCouleurBrosse(c);baisseBrosse();leveBrosse()}
^Array2:2: error: expected start of definition
override def run() {
         ^