welcome.lessons.welcome.array.basics.Array2.scala.code
def coupstylo(c:Color) {setCouleurBrosse(c);baisseBrosse();leveBrosse()}
override def run() {
  var T = new Array[Color] (getWorldHeight)
  T(0)=getCouleurSol
  for (i <- 1 to T.length - 1)
  {avance();T(i) = getCouleurSol()}
  for (i<-1 to T.length -1) {recule()}
  gauche();
  avance();
  droite();
  for (i <- 0 to T.length -2)
  {  for (j<-1 to T.length -1) {recule()}
  gauche()
  avance()
  droite();val decal = litMessage().toInt;coupstylo((0+decal)%T.length)
   for (j <-1 to T.length-1)
   {avance();coupstylo((j+decal)%T.length)
   }
}